--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,20 @@
-.hidden {
-    display: none !important;
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
 }
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #8f67ea;
+    border-radius: 10px;
+}
+
 html, body {
     max-width: 100%;
     overflow-x: hidden;
@@ -11,6 +25,9 @@ p, a, h1, h5{
     font-family: 'Raleway', sans-serif;
 }
 
+.hidden {
+    display: none !important;
+}
 
 /* start Navbar area*/
 .fa-1x {
@@ -792,6 +809,7 @@ footer  .social a:hover{
     background: url("../img/m-illustration.png");
     background-size: cover;
     background-repeat: no-repeat;
+    background-position-y: -5px;
 }
 
 #contact .jumbotron {
