--- a/css/style.css
+++ b/css/style.css
@@ -116,17 +116,21 @@ p, a, h1, h5{
 
 .overlay {
     position: absolute;
-    display: none;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
     background-color: rgba(250,250,250,.8);
     z-index: 1;
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: opacity 1s, visibility 1s;
+    transition: opacity 0.3s, visibility 0.3s;
 }
 
 .active-menu .overlay {
-    display: block;
+    visibility: visible;
+    opacity: 1;
 }
 /*Background shapes*/
 #home {
