--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ img.background-br {
 }
 
 .h-illustration{
-    width: 632px;
+    width: 575px;
     height: 363px;
     margin-bottom: -40px;
 }
@@ -244,10 +244,8 @@ img.background-br {
 }
 
 .story-content p{
-    width: 975px;
-    height: 208px;
     font-family: Raleway;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
@@ -260,6 +258,10 @@ img.background-br {
 .story-content span.description{
     color: #676dea;
     letter-spacing: 5px;
+}
+
+.description button{
+    border: none;
 }
 
 .description button a {
@@ -736,7 +738,7 @@ footer  .social a:hover{
     height: 100vh;
     width: 100vw;
     position: relative;
-    background: url("../img/m-illustration.png");
+    background: url("../img/c-soon.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: -5px;
@@ -763,6 +765,11 @@ footer  .social a:hover{
 
 /**************Mobile & Responsive**************/
 @media only screen and (max-width: 768px){
+    #contact .jumbotron{
+        width: 90%;
+        height:75%;
+    }
+
     #home .title h1{
         font-size: 50px;
         width: 100%;
@@ -799,6 +806,10 @@ footer  .social a:hover{
         width: 100%;
     }
 
+    .description{
+        margin-top: 30px;
+    }
+
     span.description{
         letter-spacing: 5px;
         color: #676DEA;
@@ -818,7 +829,17 @@ footer  .social a:hover{
     }
 
     .team{
-        margin: 20px;
+        margin: 0;
+    }
+
+    .founder img{
+        width: 150px;
+        height: 120px;
+        opacity: 0.5;
+    }
+
+    footer .social{
+        margin-bottom:50px;
     }
 
     .contact-area .founder {
@@ -847,9 +868,13 @@ footer  .social a:hover{
         font-size: 17px;
     }
 
+    .faq-area button{
+        margin-top: 0;
+    }
+
     .faq-area button a{
         width: 100%;
-        font-size: 19px;
+        font-size: 18px;
     }
 
 
